--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ social:
   - name: github
     url: https://github.com/milind
 /*  - name: codepen
-    url: https://codepen.io/thomasvaeth/ */
+    url: https://codepen.io/thomasvaeth/
+*/
 
 # Contact settings
 contact_img: /assets/images/placeholder-28.jpg
