--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Milind Sundaram
 title: The Barber Theme
 description: >
   Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
-url: http://milind.github.io
+url: http://milind.github.io/
 twitter_username: thomasvaeth
 default_img: /assets/images/seo.jpg
 social:
