--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: The Barber Theme
 description: >
   Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
 url: http://milind.github.io/
-twitter_username: thomasvaeth
+twitter_username: milindsundaram
 default_img: /assets/images/seo.jpg
 social:
   - name: twitter
