--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 email: milind.sundaram@stern.nyu.edu
 baseurl: ""
 permalink: /:year/:month/:day/:title/
-google_analytics: 
+google_analytics:
 
 name: Milind Sundaram
-title: The Barber Theme
+title: Milind - Portfolio
 description: >
   Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
 url: http://milind.github.io/
@@ -28,27 +28,27 @@ contact_img: /assets/images/placeholder-28.jpg
 formcarry: https://formcarry.com/s/HkIo0nMb7
 
 # Disqus settings
-disqus: test-apkdzgmqhj
+# disqus: test-apkdzgmqhj
 
 # MailChimp settings
-mailchimp_action: https://samesies.us17.list-manage.com/subscribe/post-json?u=66ddf555dab480e6a8606430b&amp;id=89b3ee034f
-mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
+# mailchimp_action: https://samesies.us17.list-manage.com/subscribe/post-json?u=66ddf555dab480e6a8606430b&amp;id=89b3ee034f
+# mailchimp_input: b_66ddf555dab480e6a8606430b_89b3ee034f
 
 # Author settings
 author:
   - name: Milind Sundaram
     bio: Thomas Vaeth was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
-    url: http://thomasvaeth.com
+    url: http://milind.github.io
 
 # Pagination settings
 pagination:
   enabled: true
   debug: false
   per_page: 12
-  permalink: '/page/:num/'
-  title: ':title'
+  permalink: "/page/:num/"
+  title: ":title"
   limit: 0
-  sort_field: 'date'
+  sort_field: "date"
   sort_reverse: true
 autopages:
   enabled: true
@@ -57,10 +57,10 @@ autopages:
   collections:
     enabled: false
   tags:
-    layouts: 
-      - 'tag.html'
-    title: 'The Barber Theme'
-    permalink: '/tag/:tag'
+    layouts:
+      - "tag.html"
+    title: "Portfolio"
+    permalink: "/tag/:tag"
     slugify:
       mode: raw
       cased: true
