--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Milind Sundaram
 title: Milind - Portfolio
 description: >
   A page to highlight my ideas, coding, and other projects.
-url: http://milind.github.io/
+url: http://milind.github.io
 twitter_username: milindsundaram
 default_img: /assets/images/placeholder-17.jpg
 social:
