--- a/workflows/build-jekyll.yml
+++ b/workflows/build-jekyll.yml
@@ -33,6 +33,10 @@ jobs:
           cname: ''                  # Default is to not use a cname
           actor: ''                  # Default is the GITHUB_ACTOR
 
+on:
+  schedule:
+    - cron:  '0 * * * *'
+
 git checkout --orphan gh-pages
 git rm -rf .
 git commit --allow-empty -m "initial commit"
